fix horizontal scrolling issue on mobile

--- a/style/style.scss
+++ b/style/style.scss
@@ -12,6 +12,7 @@ body {
 .main {
   font-size: 16px;
   font-family: $paragraph-font;
+  overflow-x: hidden;
 }
 
 .loading-info {
